tests/trybuild/try_indices_ordered/cannot_return_local_data.stderr
error[E0515]: cannot return value referencing local variable `data`
  --> tests/trybuild/try_indices_ordered/cannot_return_local_data.rs:11:12
   |
9  |     let slice = data.as_mut_slice();
   |                 ---- `data` is borrowed here
10 |     let (one, _two, _three) = try_indices_ordered!(slice, 1, 2, 3).unwrap();
11 |     return one
   |            ^^^ returns a value referencing data owned by the current function
